
public enum EntityTag
{
    Paladin,
    Assassin,
    Strong,
    Weak
};