using UnityEngine;

[SerializeField]
public abstract class AGridContent
{
    public Vector2Int Size;
}