public interface IEntityInteractable
{
    public void Interact(Entity entity);
}
