using System.Collections.Generic;
using UnityEngine;
using UnityEngine.EventSystems;

public class RoomDraggableSystem : MonoBehaviour
{
    public List<IDraggable> Draggables;
}
