using UnityEngine;

public class Resource
{
    public string Name;
    public int Quantity;
    public ResourceType Type;
}
