using UnityEngine;

public enum ResourceType
{
    Fame,
    Gold
};
