public class RoomData : AGridContent
{
    private ARoomContentData[] _contents;
}
