public class Entrance : ARoomContentData
{
    public override void Interact(Entity entity)
    {
        // 01/11 Jachy Hu: Leaving the function blank for now
    }
}
