@startuml
package DRAGGABLE{
    interface IDraggable
    {
        usa le interfacce di unity
        onPointerEnter, onPointerExit, etc...
    }
    class RoomDraggableSystem <<(M, lightblue)>>
    {
        -List<IDraggable> : Draggables
        
        +RegisterDraggable(Idraggable))
        +UnregisterDraggable(Idraggable)
    }
    class RoomContentDraggableSystem <<(M, lightblue)>>
        {
            -List<IDraggable> : Draggables
            
            +RegisterDraggable(Idraggable))
            +UnregisterDraggable(Idraggable)
        }
}
class Room<<(M, lightblue)>>
{
  +Action<Vector3> : OnPickup
  +Action<Vector3> : OnRelease
  +RoomData : Data
  
  +Init(RoomData)
}


  class SaveData
  {
    +Grid
    +PlayerStats
  }

package ROOM_DATA
{
  class Grid
  {
    -Vector2Int : _maxSize
    -Vector2Int : _currentSize
    -Vector3    : _origin
    -Vector2    : _worldCellSize
    -Dictionary<int, AGridContent> : _content
    -Dictionary<int, int[]> _connections
    
    +IndexToGridCoord(int) : Vector2
    +GridCoordToIndex(Vector2Int) : int
    +GridCoordToWorldCoord(Vector2) : Vector3
    +GetGridContent(int) : GridContent
    +RemoveContent(int) : GridContent
    +AddContent(int, GridContent)
  }
    
  abstract AGridContent
  {
    +Vector2int : Size
  }
  
  class RoomData
  {
    ARoomContentData[] : Contents
    Interact(Entity)-->Contents.Interact(Entity) 
  }
  
  class GridManager<<(M, lightblue) singleton>>
  {
    -Grid : _grid
    +SetGridSize(Vector2Int)
    +GetGrid() : Grid
  }

}
  
interface IEntityInteractable
{
    +Interact(Entity)
} 
 
package PLAYER_DATA
{
  enum ResourceType
  {
    FAME
    GOLD
  }
  class Resource 
  {
    +string : Name
    +int : Quantity
    +ResourceType : Type
  }
   class PlayerStats <<singleton>>
   {
     -Resource[] : resources
     -Purchasable[] : purchasedItems
     -initializeResources()
     +AddResource(ResourceType, int)
     +GetResourceQuantity(ResourceType)
   }
    
}
  
package MARKET
{
  class Purchasable<<(S, red)>>
  {
    +Sprite : Sprite
    +int : MaxPurchases
    +int : Price
    +int : FameNeeded
    +Purchase();
  }
  class Market<<(M, lightblue)>>
  {
    +Purchasable[] : items
    +TryPurchase(Purchasable) : bool
    +CanPurchase(Purchasable) : bool
  }
  
  class MarketSlot<<(M , lightblue)>>
  {
   +Purchasable : slotData
   -Button : _button
   -Image : _image
   -Market : _market
   +void : Initialize(Purchasable , Market)
   +void : OnClick()
  }

}

package ENTITY
{
  class Entity<<(M, lightblue)>>
  {
    +EntityTag[] : tagMask
    +Dictionary<ResourceType,Resource> : ResourcesGained
    
    +AddResources(Resource) : void
    +Die() : void
    +CheckEntityTag(EntityTag) : bool --> con override per supportare List e array
  }
  
  enum EntityTag
  {
  Paladin, Assassin,
  Strong, weak, ...
  }
}

package PATHFINDING
{
    class PathFinder
    {
        static GetGridPath(Grid, int fromIndex, int toIndex) : Path
    }
    
    class Path{
        -int[] : _path
        -Grid : _grid
        -int : _currenStep
        NextStep();
        PreviousStep();
    }
    
    class EntityPath<<(M, lightblue)>>
    {
        -Entity : _entity
        -Path : _path
    }
}

package CONTENT {
  abstract class ARoomContentData{
    #string : _name
    #int : _usages
    #EntityTag[] : _interactableTagMask
    #bool : _isUsable
    
    +Interact(Entity)
    +Reset()
  }
  class RoomContent <<(M,lightblue)>>
  {
    +Action<Vector3> : OnPickup
    +Action<Vector3> : OnRelease
    +Init(ARoomContentData)
  }
  class Entrance

  class Mimik {
     +Interact(Entity) --> devour Entity(gets gold)
  }
  
  class Trap{
    -EntityTag[] : _disarmTagMask
    
    +Interact(Entity) --> kill Entity / Disarm() / ignore
    +Disarm()
  }
  
  class Monster{
    -int : _fameReward
    -EntityTag[] : _killTagMask
    
    +Interact(Entity) --> kill Entity / Kill() / ignore
    +Kill()
  }
  
  abstract class AItem{
    +Interact(Entity) --> collect 
  }
  
  class Item
  {
  treasure, sword, ...
  }
  ARoomContentData <|-- Entrance
  ARoomContentData <|-- Mimik
  ARoomContentData <|-- Trap
  ARoomContentData <|-- Monster
  ARoomContentData <|-- AItem
  
  AItem --* Item
}
IEntityInteractable <|.. ARoomContentData
RoomData .|> IEntityInteractable

Grid *-- AGridContent
AGridContent <|-- RoomData

PlayerStats --o SaveData

GridManager *-- Grid

Market *- Purchasable
MarketSlot <- Market : Instantiate
Market --> PlayerStats : uses

EntityTag --* Entity

Room ..|> IDraggable
IDraggable -o RoomDraggableSystem
IDraggable --o RoomContentDraggableSystem
IDraggable <|. RoomContent

RoomData -* Room

RoomData *-- ARoomContentData
ARoomContentData -* RoomContent
PlayerStats *- Resource
Resource *- ResourceType

PathFinder -> Path : uses
EntityPath *-- Path
Entity <-- EntityPath : interacts with
@enduml

